--- a/package.json
+++ b/package.json
@@ -11,6 +11,16 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.4"
+    "@nuxtjs/color-mode": "^3.3.0",
+    "nuxt": "^3.7.4",
+    "sass": "^1.68.0"
+  },
+  "dependencies": {
+    "@nuxt/image": "^1.0.0-rc.2",
+    "nuxt-icons": "^3.2.1",
+    "reset-css": "^5.0.2",
+    "swiper": "^10.3.1",
+    "vue-window-size": "^2.0.0",
+    "vue3-perfect-scrollbar": "^1.6.1"
   }
 }
