--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "start": "nuxt start",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
@@ -17,6 +18,7 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.0.0-rc.2",
+    "ipx": "^1.3.1",
     "nuxt-icons": "^3.2.1",
     "reset-css": "^5.0.2",
     "swiper": "^10.3.1",
